--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -26,14 +26,14 @@ jobs:
           cd server
           npm install
 
-      # ---------- CI-ONLY FIXES (NO SOURCE EDITS) ----------
-
-      - name: CI-only install for CORS (runtime + types)
+      # ---- CI-ONLY: satisfy TypeScript for cors ----
+      - name: Ensure cors types for build (CI-only)
         run: |
           cd server
           npm install cors @types/cors --no-save
 
-      - name: CI-only stub for missing ./routes import
+      # ---- CI-ONLY: ensure routes module exists ----
+      - name: Ensure routes module exists for TypeScript (CI-only)
         run: |
           cd server
           if [ ! -f src/routes.ts ]; then
@@ -41,36 +41,14 @@ jobs:
 import { Express } from "express";
 
 export function registerRoutes(app: Express) {
-  // CI stub – real routes wired at runtime
+  app.get("/", (_req, res) => {
+    res.status(200).send("OK");
+  });
 }
 EOF
           fi
-
-      # ---------- BUILD ----------
 
       - name: Build server
         run: |
           cd server
           npm run build
-
-      # ---------- CI-ONLY RUNTIME FIX ----------
-
-      - name: Force CommonJS runtime for Azure
-        run: |
-          mkdir -p server/dist
-          cat > server/dist/package.json <<'EOF'
-{
-  "type": "commonjs"
-}
-EOF
-
-      - name: Archive build output
-        run: |
-          cd server
-          tar -czf server-build.tar.gz dist package.json
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: staff-server-build
-          path: server/server-build.tar.gz
