--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,53 +2,54 @@ name: Deploy Staff Server
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: |
+            package-lock.json
+            server/package-lock.json
 
-      - name: Install root dependencies
+      - name: Install root deps
         run: npm install
 
-      - name: Install server dependencies
-        run: |
-          cd server
-          npm install
+      - name: Install server deps
+        working-directory: server
+        run: npm install
 
-      # ---- CI-ONLY: satisfy TypeScript for cors ----
-      - name: Ensure cors types for build (CI-only)
-        run: |
-          cd server
-          npm install cors @types/cors --no-save
+      # CI-only: satisfy TypeScript for cors
+      - name: Add CI-only cors deps
+        working-directory: server
+        run: npm install cors @types/cors --no-save
 
-      # ---- CI-ONLY: ensure routes module exists ----
-      - name: Ensure routes module exists for TypeScript (CI-only)
+      # CI-only: create src/routes.ts if missing (NO heredoc)
+      - name: Create routes module if missing
+        working-directory: server
+        shell: bash
         run: |
-          cd server
           if [ ! -f src/routes.ts ]; then
-            cat > src/routes.ts <<'EOF'
-import { Express } from "express";
-
-export function registerRoutes(app: Express) {
-  app.get("/", (_req, res) => {
-    res.status(200).send("OK");
-  });
-}
-EOF
+            mkdir -p src
+            printf '%s\n' \
+              'import { Express } from "express";' \
+              '' \
+              'export function registerRoutes(app: Express) {' \
+              '  app.get("/api/public/health", (_req, res) => res.status(200).json({ ok: true }));' \
+              '  app.get("/", (_req, res) => res.status(200).send("OK"));' \
+              '}' \
+              > src/routes.ts
           fi
 
       - name: Build server
-        run: |
-          cd server
-          npm run build
+        working-directory: server
+        run: npm run build
