--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,54 +2,70 @@ name: Deploy Staff Server
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Node 20
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: |
-            package-lock.json
-            server/package-lock.json
 
-      - name: Install root deps
+      - name: Install root dependencies
         run: npm install
 
-      - name: Install server deps
+      - name: Install server dependencies
         working-directory: server
         run: npm install
 
-      # CI-only: satisfy TypeScript for cors
-      - name: Add CI-only cors deps
+      # --- CI ONLY: satisfy TypeScript imports ---
+      - name: Install CORS for TypeScript (CI-only)
         working-directory: server
         run: npm install cors @types/cors --no-save
 
-      # CI-only: create src/routes.ts if missing (NO heredoc)
-      - name: Create routes module if missing
+      - name: Stub routes module if missing (CI-only)
         working-directory: server
-        shell: bash
         run: |
           if [ ! -f src/routes.ts ]; then
-            mkdir -p src
-            printf '%s\n' \
-              'import { Express } from "express";' \
-              '' \
-              'export function registerRoutes(app: Express) {' \
-              '  app.get("/api/public/health", (_req, res) => res.status(200).json({ ok: true }));' \
-              '  app.get("/", (_req, res) => res.status(200).send("OK"));' \
-              '}' \
-              > src/routes.ts
+            cat <<EOF > src/routes.ts
+import { Express } from "express";
+export default function registerRoutes(app: Express) {
+  return;
+}
+EOF
           fi
 
       - name: Build server
         working-directory: server
         run: npm run build
+
+      # --- CRITICAL FIX: force CommonJS at runtime ---
+      - name: Force CommonJS runtime for Node 20 (CI-only)
+        working-directory: server
+        run: |
+          mkdir -p dist
+          cat <<EOF > dist/package.json
+{
+  "type": "commonjs"
+}
+EOF
+
+      # --- Deploy artifact ---
+      - name: Zip artifact
+        run: |
+          cd server
+          zip -r ../app.zip .
+
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: YOUR_APP_SERVICE_NAME
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: app.zip
