--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -54,9 +54,15 @@ jobs:
           cd server
           zip -r ../app.zip .
 
+      # 🔑 REQUIRED: LOGIN TO AZURE
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # 🚀 DEPLOY
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: YOUR_APP_SERVICE_NAME
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: app.zip
