--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -29,25 +29,31 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
-            const path = 'server/src/routes.ts';
-            fs.mkdirSync('server/src', { recursive: true });
-            fs.writeFileSync(
-              path,
-              `import { Express } from "express";
+            const fs = require("fs");
+            const dir = "server/src";
+            const file = "server/src/routes.ts";
 
-export function registerRoutes(app: Express) {
-  // CI stub
-}
-`
-            );
+            if (!fs.existsSync(dir)) {
+              fs.mkdirSync(dir, { recursive: true });
+            }
+
+            const lines = [
+              'import { Express } from "express";',
+              '',
+              'export function registerRoutes(app: Express) {',
+              '  // CI stub',
+              '}',
+              ''
+            ];
+
+            fs.writeFileSync(file, lines.join("\n"));
 
       - name: Build server
         run: |
           cd server
           npm run build
 
-      - name: Fix CommonJS for Azure
+      - name: Force CommonJS for Azure
         run: |
           rm -f server/dist/package.json
           echo '{ "type": "commonjs" }' > server/dist/package.json
@@ -59,9 +65,9 @@ export function registerRoutes(app: Express) {
 
       - uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: "${{ secrets.AZURE_CREDENTIALS }}"
 
       - uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ secrets.AZURE_APP_NAME }}
+          app-name: "${{ secrets.AZURE_APP_NAME }}"
           package: app.zip
