--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -27,27 +27,17 @@ jobs:
           npm install
           npm install cors @types/cors --no-save
 
-      # ---- CI-ONLY: create missing routes module BEFORE build ----
       - name: Generate routes module (CI-only)
         run: |
           cd server
           mkdir -p src
-          cat > src/routes.ts <<'EOF'
-import { Express } from "express";
-
-export function registerRoutes(app: Express) {
-  // no-op placeholder for CI
-}
-
-export default registerRoutes;
-EOF
+          printf "import { Express } from \"express\";\n\nexport function registerRoutes(app: Express) {}\n\nexport default registerRoutes;\n" > src/routes.ts
 
       - name: Build server
         run: |
           cd server
           npm run build
 
-      # ---- FIX Azure ESM crash ----
       - name: Force CommonJS for Azure runtime
         run: |
           rm -f server/dist/package.json
