--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,14 +1,12 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "src",
-    "noEmit": false
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "exclude": [
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "**/__tests__/**",
-    "node_modules"
-  ]
+  "include": ["src"]
 }
