--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,12 +1,15 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "declaration": false,
+    "sourceMap": false
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"],
+  "exclude": [
+    "src/__tests__/**",
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
