--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,26 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+
+    "drizzle-orm": "^0.30.10",
+    "pg": "^8.11.5",
+
+    "zod": "^3.23.8",
+    "dotenv": "^16.4.5",
+
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+
+    "@azure/storage-blob": "^12.19.0"
   },
   "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/node": "^20.12.7",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.4.5"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pg": "^8.11.6"
   }
 }
