--- a/server/package.json
+++ b/server/package.json
@@ -9,27 +9,26 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-
-    "drizzle-orm": "^0.30.10",
-    "pg": "^8.11.5",
-
-    "zod": "^3.23.8",
-    "dotenv": "^16.4.5",
-
+    "@azure/storage-blob": "^12.19.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-
-    "@azure/storage-blob": "^12.19.0"
+    "pg": "^8.11.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/node": "^20.12.7",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/pg": "^8.11.6"
+    "@types/node": "^20.12.12",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "typescript": "^5.4.5"
   }
 }
