--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,15 +1,14 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
-    "declaration": false,
-    "sourceMap": false
+    "strict": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": [
-    "src/__tests__/**",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/__tests__", "**/*.test.ts"]
 }
