--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -2,11 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "declaration": false
   },
-  "exclude": [
-    "**/__tests__/**",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/__tests__", "**/*.test.ts"]
 }
