--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@azure/storage-blob": "^12.19.0",
     "bcryptjs": "^2.4.3",
