Add admin reseed script and gate OTP by env

--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -26,6 +26,11 @@ jobs:
           cd server
           npm install
 
+      - name: Seed Admin User (forced)
+        run: |
+          cd server
+          npm run seed:admin
+
       - name: Build server
         run: |
           cd server
