--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed:admin": "tsx src/scripts/seedAdmin.ts"
   },
   "engines": {
     "node": ">=20"
@@ -33,6 +34,7 @@
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
+    "tsx": "^4.19.4",
     "typescript": "^5.4.5"
   }
 }
