--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,36 +2,32 @@ name: Deploy Staff Server
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 permissions:
   contents: read
-  id-token: write   # REQUIRED for Azure OIDC login
+  id-token: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
-      - name: Install server dependencies
-        working-directory: server
-        run: npm ci
+      - name: Install
+        run: |
+          cd server
+          npm ci
 
-      - name: Build server
-        working-directory: server
-        run: npm run build
+      - name: Build
+        run: |
+          cd server
+          npm run build
 
-      # ---- AZURE AUTH (THIS IS WHAT WAS BROKEN) ----
       - name: Azure Login (OIDC)
         uses: azure/login@v1
         with:
@@ -39,8 +35,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # ---- DEPLOY ----
-      - name: Deploy to Azure App Service
+      - name: Deploy
         uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
