--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.4.5"
   }
