--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "outDir": "dist",
     "rootDir": "server/src",
-    "outDir": "dist/server",
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
-    "skipLibCheck": true,
-    "noEmitOnError": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "allowJs": false,
-    "sourceMap": false,
-    "declaration": false
+    "skipLibCheck": true
   },
-  "include": [
-    "server/src/**/*.ts",
-    "types/**/*.ts",
-    "prisma/**/*.ts"
-  ],
-  "exclude": [
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "tests/**",
-    "simulation/**",
-    "node_modules/**",
-    "dist/**"
-  ]
+  "include": ["server/src/**/*"]
 }
