Fix auth route typing and narrow TypeScript build scope

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["server/src/**/*"]
+  "include": ["server/src/**/*"],
+  "exclude": ["server/src/__tests__"]
 }
