Add Jest configuration and adjust tests for ESM setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "server/src",
     "strict": true,
@@ -11,5 +11,5 @@
     "skipLibCheck": true
   },
   "include": ["server/src/**/*"],
-  "exclude": ["server/src/__tests__"]
+  "exclude": ["server/src/__tests__", "**/*.test.ts"]
 }
