--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "dev": "node --watch dist/index.js"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
@@ -25,8 +27,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
