--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "e2e": "playwright test",
+    "build": "tsc -p server/tsconfig.build.json",
+    "start": "node --experimental-specifier-resolution=node dist/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "dev": "node --watch dist/index.js"
+    "dev": "node --watch --experimental-specifier-resolution=node dist/index.js"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
@@ -23,7 +22,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.57.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
