--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,13 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "../dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
+    "start": "node --experimental-specifier-resolution=node ../dist/index.js",
     "seed:admin": "tsx src/scripts/seedAdmin.ts",
-    "test": "jest --runInBand"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "engines": {
     "node": ">=20"
