--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,8 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "declaration": false
+    "outDir": "../dist",
+    "rootDir": "./src",
+    "declaration": false,
+    "sourceMap": false
   },
-  "exclude": ["src/__tests__", "**/*.test.ts"]
+  "exclude": [
+    "**/__tests__/**",
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
